--- a/css/style.css
+++ b/css/style.css
@@ -729,15 +729,16 @@ dt {
       font-weight: normal;
       list-style: none;
       display: inline;
+      padding: 0 2px;
       color: white;
       line-height: 50px;
       text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
       font-size: 14px; }
       #header nav li a {
         color: white;
-        border: 1px solid #5d910b; <!-- #5d910b -->
+        border: 2px solid #000000; <!-- #5d910b -->
         background: linear_gradient(#93bd20, #659e10); <!-- #93bd20, #659e10 -->
-        border-radius: 2px;
+        border-radius: 20px;
         box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.7);
         background-color: #31923E;
         padding: 10px 12px;
