--- a/css/style.css
+++ b/css/style.css
@@ -736,10 +736,10 @@ dt {
       font-size: 14px; }
       #header nav li a {
         color: white;
-        border: 2px solid #000000; <!-- #5d910b -->
+        border: 2px solid #000000; <!-- #000000 -->
         background: linear_gradient(#93bd20, #659e10); <!-- #93bd20, #659e10 -->
-        border-radius: 20px;
         box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.7);
+        border-radius: 10px;
         background-color: #31923E;
         padding: 10px 12px;
         margin-top: 6px;
